--- a/Tests/Fixtures/StencilContexts/Plist/info.yaml
+++ b/Tests/Fixtures/StencilContexts/Plist/info.yaml
@@ -74,6 +74,14 @@ files:
               type: "String"
             Kits:
               element:
+                items:
+                - properties:
+                    KitInfo:
+                      properties: {}
+                      type: "Dictionary"
+                    KitName:
+                      type: "String"
+                  type: "Dictionary"
                 type: "Dictionary"
               type: "Array"
           type: "Dictionary"
