--- a/Tests/Fixtures/StencilContexts/Plist/shopping-list.yaml
+++ b/Tests/Fixtures/StencilContexts/Plist/shopping-list.yaml
@@ -1,11 +1,12 @@
 files:
 - documents:
   - data:
-    - "value1"
-    - "value2"
+    - "Eggs"
+    - "Bread"
+    - "Milk"
     metadata:
       element:
         type: "String"
       type: "Array"
-  name: "array"
-  path: "array.plist"
+  name: "shopping-list"
+  path: "shopping-list.plist"
