--- a/Tests/Fixtures/StencilContexts/Yaml/configuration.yaml
+++ b/Tests/Fixtures/StencilContexts/Yaml/configuration.yaml
@@ -1,29 +1,29 @@
 files:
 - documents:
   - data:
-      key1: "value1"
-      key2: "2"
-      key3:
-        nestedKey3:
+      api-version: "2"
+      country: null
+      environment: "staging"
+      options:
+        screen-order:
         - "1"
         - "2"
         - "3"
-      key4: null
     metadata:
       properties:
-        key1:
+        api-version:
           type: "String"
-        key2:
+        country:
+          type: "Optional"
+        environment:
           type: "String"
-        key3:
+        options:
           properties:
-            nestedKey3:
+            screen-order:
               element:
                 type: "String"
               type: "Array"
           type: "Dictionary"
-        key4:
-          type: "Optional"
       type: "Dictionary"
-  name: "json"
-  path: "json.json"
+  name: "configuration"
+  path: "configuration.json"
