--- a/SwiftGen.playground/Resources/shopping-list.plist
+++ b/SwiftGen.playground/Resources/shopping-list.plist
@@ -2,7 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <array>
-	<string>value1</string>
-	<string>value2</string>
+	<string>Eggs</string>
+	<string>Bread</string>
+	<string>Milk</string>
 </array>
 </plist>
