--- a/Tests/Fixtures/StencilContexts/Strings/multiple.yaml
+++ b/Tests/Fixtures/StencilContexts/Strings/multiple.yaml
@@ -74,6 +74,9 @@ tables:
       - "Int"
       - "String"
       - "String"
+    - key: "percent"
+      name: "percent"
+      translation: "This is a %% character."
     - key: "private"
       name: "private"
       translation: "Hello, my name is %@ and I'm %d"
