Run tests in parallel and random order

--- a/SwiftGen.xcodeproj/xcshareddata/xcschemes/SwiftGenKit - Generate Contexts.xcscheme
+++ b/SwiftGen.xcodeproj/xcshareddata/xcschemes/SwiftGenKit - Generate Contexts.xcscheme
@@ -13,7 +13,8 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "DDDE519F1FAF814A004203BE"
