--- a/SwiftGen.xcodeproj/xcshareddata/xcschemes/Templates - Generate Output.xcscheme
+++ b/SwiftGen.xcodeproj/xcshareddata/xcschemes/Templates - Generate Output.xcscheme
@@ -13,7 +13,8 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "DDDE50291FAF687A004203BE"
