--- a/SwiftGen.xcodeproj/xcshareddata/xcschemes/SwiftGenKit.xcscheme
+++ b/SwiftGen.xcodeproj/xcshareddata/xcschemes/SwiftGenKit.xcscheme
@@ -29,7 +29,9 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "DDDE519F1FAF814A004203BE"
