Improve config env. test

--- a/Tests/Fixtures/Configs/config-with-env-placeholder.yml
+++ b/Tests/Fixtures/Configs/config-with-env-placeholder.yml
@@ -14,5 +14,5 @@ strings:
           - 4
           - bar3a: 50
       baz:
-        - hello
-        - world
+        - ${HELLO}
+        - $HELLO world
