Add localizable keys with '__'

--- a/Tests/Fixtures/StencilContexts/Strings/localizable.yaml
+++ b/Tests/Fixtures/StencilContexts/Strings/localizable.yaml
@@ -51,21 +51,21 @@ tables:
         - key: "settings.navigation-bar.self"
           name: "self"
           translation: "Some Reserved Keyword there"
-      - name: "user_profile_section"
+      - name: "user__profile_section"
         strings:
-        - key: "settings.user_profile_section.footer_text"
+        - key: "settings.user__profile_section.footer_text"
           name: "footer_text"
           translation: "Here you can change some user profile settings."
-        - key: "settings.user_profile_section.HEADER_TITLE"
+        - key: "settings.user__profile_section.HEADER_TITLE"
           name: "HEADER_TITLE"
           translation: "User Profile Settings"
       name: "settings"
     strings:
-    - key: "alert_message"
-      name: "alert_message"
+    - key: "alert__message"
+      name: "alert__message"
       translation: "Some alert body there"
-    - key: "alert_title"
-      name: "alert_title"
+    - key: "alert__title"
+      name: "alert__title"
       translation: "Title of the alert"
     - key: "ObjectOwnership"
       name: "ObjectOwnership"
