Update test data

--- a/Tests/Fixtures/StencilContexts/CoreData/defaults.yaml
+++ b/Tests/Fixtures/StencilContexts/CoreData/defaults.yaml
@@ -175,6 +175,17 @@ models:
         isIndexed: false
         isOptional: true
         isTransient: false
+        name: "integerEnum"
+        propertyType: "attribute"
+        type: "Integer 16"
+        typeName: "Int16"
+        userInfo:
+          enumType: "IntegerEnum"
+        usesScalarValueType: true
+      - customClassName: ""
+        isIndexed: false
+        isOptional: true
+        isTransient: false
         name: "optionalBoolean"
         propertyType: "attribute"
         type: "Boolean"
@@ -250,6 +261,17 @@ models:
         type: "String"
         typeName: "String"
         userInfo: {}
+        usesScalarValueType: false
+      - customClassName: ""
+        isIndexed: false
+        isOptional: true
+        isTransient: false
+        name: "stringEnum"
+        propertyType: "attribute"
+        type: "String"
+        typeName: "String"
+        userInfo:
+          enumType: "StringEnum"
         usesScalarValueType: false
       - customClassName: ""
         isIndexed: false
