--- a/Tests/Fixtures/StencilContexts/CoreData/defaults.yaml
+++ b/Tests/Fixtures/StencilContexts/CoreData/defaults.yaml
@@ -180,7 +180,7 @@ models:
         type: "Integer 16"
         typeName: "Int16"
         userInfo:
-          enumType: "IntegerEnum"
+          RawType: "IntegerEnum"
         usesScalarValueType: true
       - customClassName: ""
         isIndexed: false
@@ -271,7 +271,7 @@ models:
         type: "String"
         typeName: "String"
         userInfo:
-          enumType: "StringEnum"
+          RawType: "StringEnum"
         usesScalarValueType: false
       - customClassName: ""
         isIndexed: false
