Enable new rules

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -57,6 +57,7 @@ opt_in_rules:
  - vertical_parameter_alignment_on_call
  - vertical_whitespace_closing_braces
  - vertical_whitespace_opening_braces
+ - weak_computed_property
  - xct_specific_matcher
  - yoda_condition
 
