--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,18 @@ defaults:
       CIRCLE_TEST_REPORTS: /tmp/circleci-test-results
       BUNDLE_PATH: vendor/bundle
     macos:
-      xcode: "10.2.1"
+      xcode: "11.2.1"
     shell: /bin/bash --login -eo pipefail
   - &prepare-storage
     run:
       name: Create directories for artifacts and reports
       command: mkdir -p $CIRCLE_ARTIFACTS $CIRCLE_TEST_REPORTS
+  - &enable-ruby-auto-switching
+    run:
+      name: Enable Ruby Auto-Switching
+      command: >
+        echo "source /usr/local/share/chruby/chruby.sh" >> ~/.bash_profile;
+        echo "source /usr/local/share/chruby/auto.sh" >> ~/.bash_profile
   - &restore-gems
     restore_cache:
       keys:
@@ -45,6 +51,7 @@ jobs:
     steps:
       - *prepare-storage
       - checkout
+      - *enable-ruby-auto-switching
       - *restore-gems
       - *install-gems
       - *store-gems
@@ -67,6 +74,7 @@ jobs:
     steps:
       - *prepare-storage
       - checkout
+      - *enable-ruby-auto-switching
       - *restore-gems
       - *install-gems
       - *store-gems
@@ -91,6 +99,7 @@ jobs:
     steps:
       - *prepare-storage
       - checkout
+      - *enable-ruby-auto-switching
       - *restore-gems
       - *install-gems
       - *store-gems
@@ -116,6 +125,7 @@ jobs:
     steps:
       - *prepare-storage
       - checkout
+      - *enable-ruby-auto-switching
       - *restore-gems
       - *install-gems
       - *store-gems
@@ -129,6 +139,7 @@ jobs:
     steps:
       - *prepare-storage
       - checkout
+      - *enable-ruby-auto-switching
       - *restore-gems
       - *install-gems
       - *store-gems
