--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,10 +156,16 @@ workflows:
   version: 2
   lint-buildandtest-compileoutput-checkdeploy:
     jobs:
+      - lint
       - spm-build-and-test
+      - xcode-build-and-test
       - compile-output:
           requires:
+            - lint
             - spm-build-and-test
+            - xcode-build-and-test
       - check-deploy:
           requires:
+            - lint
             - spm-build-and-test
+            - xcode-build-and-test
