--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,7 +109,7 @@ jobs:
             - homebrew-
       - run:
           name: Install libxml2
-          command: brew install --force libxml2
+          command: echo SKIP brew install libxml2
       -  save_cache:
           key: homebrew-{{ checksum ".circleci/config.yml" }}
           paths:
