--- a/Tests/Fixtures/StencilContexts/Strings/plurals-advanced.yaml
+++ b/Tests/Fixtures/StencilContexts/Strings/plurals-advanced.yaml
@@ -9,6 +9,14 @@ tables:
           translation: "Plural case 'other': %@ has %d ratings"
           types:
           - "Int"
+      - name: "placeholders-and-variables"
+        strings:
+        - key: "multiple.placeholders-and-variables.string-int"
+          name: "string-int"
+          translation: "Plural case 'other': %@ has %d ratings"
+          types:
+          - "String"
+          - "Int"
       - name: "variables"
         strings:
         - key: "multiple.variables.three-variables-in-formatkey"
