--- a/Tests/Fixtures/StencilContexts/JSON/configuration.yaml
+++ b/Tests/Fixtures/StencilContexts/JSON/configuration.yaml
@@ -1,5 +1,31 @@
 files:
-- documents:
+- document:
+    data:
+      api-version: "2"
+      country: null
+      environment: "staging"
+      options:
+        screen-order:
+        - "1"
+        - "2"
+        - "3"
+    metadata:
+      properties:
+        api-version:
+          type: "String"
+        country:
+          type: "Optional"
+        environment:
+          type: "String"
+        options:
+          properties:
+            screen-order:
+              element:
+                type: "String"
+              type: "Array"
+          type: "Dictionary"
+      type: "Dictionary"
+  documents:
   - data:
       api-version: "2"
       country: null
