--- a/Tests/Fixtures/StencilContexts/Strings/plurals-advanced.yaml
+++ b/Tests/Fixtures/StencilContexts/Strings/plurals-advanced.yaml
@@ -4,6 +4,36 @@ tables:
     - children:
       - name: "placeholders-and-variables"
         strings:
+        - key: "mixed.placeholders-and-variables.positionalstring-positional3int"
+          name: "positionalstring-positional3int"
+          translation: "Plural format key: \"%1$@ %3$#@has_rating@\""
+          types:
+          - "String"
+          - "UnsafeRawPointer"
+          - "Int"
+        - key: "mixed.placeholders-and-variables.string-int"
+          name: "string-int"
+          translation: "Plural format key: \"%@ %#@has_rating@\""
+          types:
+          - "String"
+          - "Int"
+        - key: "mixed.placeholders-and-variables.string-positional2int"
+          name: "string-positional2int"
+          translation: "Plural format key: \"%@ %2$#@has_rating@\""
+          types:
+          - "String"
+          - "Int"
+        - key: "mixed.placeholders-and-variables.string-positional3int"
+          name: "string-positional3int"
+          translation: "Plural format key: \"%@ %3$#@has_rating@\""
+          types:
+          - "String"
+          - "UnsafeRawPointer"
+          - "Int"
+      name: "mixed"
+    - children:
+      - name: "placeholders-and-variables"
+        strings:
         - key: "multiple.placeholders-and-variables.int-string-string"
           name: "int-string-string"
           translation: "Plural format key: \"Your %3$@ list contains %1$#@first@ %2$@.\""
@@ -11,12 +41,6 @@ tables:
           - "Int"
           - "String"
           - "String"
-        - key: "multiple.placeholders-and-variables.string-int"
-          name: "string-int"
-          translation: "Plural format key: \"%@ %#@has_rating@\""
-          types:
-          - "String"
-          - "Int"
       - name: "variables"
         strings:
         - key: "multiple.variables.three-variables-in-formatkey"
