--- a/Tests/Fixtures/StencilContexts/JSON/array.yaml
+++ b/Tests/Fixtures/StencilContexts/JSON/array.yaml
@@ -1,49 +1,19 @@
 files:
 - document:
     data:
-    - id: "1"
-      name: "Anna"
-    - id: "2"
-      name: "Bob"
+    - "Anna"
+    - "Bob"
     metadata:
       element:
-        items:
-        - properties:
-            id:
-              type: "String"
-            name:
-              type: "String"
-          type: "Dictionary"
-        - properties:
-            id:
-              type: "String"
-            name:
-              type: "String"
-          type: "Dictionary"
-        type: "Dictionary"
+        type: "String"
       type: "Array"
   documents:
   - data:
-    - id: "1"
-      name: "Anna"
-    - id: "2"
-      name: "Bob"
+    - "Anna"
+    - "Bob"
     metadata:
       element:
-        items:
-        - properties:
-            id:
-              type: "String"
-            name:
-              type: "String"
-          type: "Dictionary"
-        - properties:
-            id:
-              type: "String"
-            name:
-              type: "String"
-          type: "Dictionary"
-        type: "Dictionary"
+        type: "String"
       type: "Array"
   name: "array"
   path: "array.json"
