--- a/Tests/Fixtures/StencilContexts/Fonts/defaults.yaml
+++ b/Tests/Fixtures/StencilContexts/Fonts/defaults.yaml
@@ -1,74 +1,101 @@
 families:
 - fonts:
-  - name: ".SFNSDisplay-Black"
+  - icons: []
+    name: ".SFNSDisplay-Black"
     path: "Fonts/SFNSDisplay-Black.otf"
     style: "Black"
-  - name: ".SFNSDisplay-Bold"
+  - icons: []
+    name: ".SFNSDisplay-Bold"
     path: "Fonts/SFNSDisplay-Bold.otf"
     style: "Bold"
-  - name: ".SFNSDisplay-Heavy"
+  - icons: []
+    name: ".SFNSDisplay-Heavy"
     path: "Fonts/SFNSDisplay-Heavy.otf"
     style: "Heavy"
-  - name: ".SFNSDisplay-Regular"
+  - icons: []
+    name: ".SFNSDisplay-Regular"
     path: "Fonts/SFNSDisplay-Regular.otf"
     style: "Regular"
   name: ".SF NS Display"
 - fonts:
-  - name: ".SFNSText-Bold"
+  - icons: []
+    name: ".SFNSText-Bold"
     path: "Fonts/SFNSText-Bold.otf"
     style: "Bold"
-  - name: ".SFNSText-Heavy"
+  - icons: []
+    name: ".SFNSText-Heavy"
     path: "Fonts/SFNSText-Heavy.otf"
     style: "Heavy"
-  - name: ".SFNSText-Regular"
+  - icons: []
+    name: ".SFNSText-Regular"
     path: "Fonts/SFNSText-Regular.otf"
     style: "Regular"
   name: ".SF NS Text"
 - fonts:
-  - name: "Avenir-Black"
+  - icons: []
+    name: "Avenir-Black"
     path: "Fonts/Avenir.ttc"
     style: "Black"
-  - name: "Avenir-BlackOblique"
+  - icons: []
+    name: "Avenir-BlackOblique"
     path: "Fonts/Avenir.ttc"
     style: "Black Oblique"
-  - name: "Avenir-Book"
+  - icons: []
+    name: "Avenir-Book"
     path: "Fonts/Avenir.ttc"
     style: "Book"
-  - name: "Avenir-BookOblique"
+  - icons: []
+    name: "Avenir-BookOblique"
     path: "Fonts/Avenir.ttc"
     style: "Book Oblique"
-  - name: "Avenir-Heavy"
+  - icons: []
+    name: "Avenir-Heavy"
     path: "Fonts/Avenir.ttc"
     style: "Heavy"
-  - name: "Avenir-HeavyOblique"
+  - icons: []
+    name: "Avenir-HeavyOblique"
     path: "Fonts/Avenir.ttc"
     style: "Heavy Oblique"
-  - name: "Avenir-Light"
+  - icons: []
+    name: "Avenir-Light"
     path: "Fonts/Avenir.ttc"
     style: "Light"
-  - name: "Avenir-LightOblique"
+  - icons: []
+    name: "Avenir-LightOblique"
     path: "Fonts/Avenir.ttc"
     style: "Light Oblique"
-  - name: "Avenir-Medium"
+  - icons: []
+    name: "Avenir-Medium"
     path: "Fonts/Avenir.ttc"
     style: "Medium"
-  - name: "Avenir-MediumOblique"
+  - icons: []
+    name: "Avenir-MediumOblique"
     path: "Fonts/Avenir.ttc"
     style: "Medium Oblique"
-  - name: "Avenir-Oblique"
+  - icons: []
+    name: "Avenir-Oblique"
     path: "Fonts/Avenir.ttc"
     style: "Oblique"
-  - name: "Avenir-Roman"
+  - icons: []
+    name: "Avenir-Roman"
     path: "Fonts/Avenir.ttc"
     style: "Roman"
   name: "Avenir"
 - fonts:
-  - name: "ZapfDingbatsITC"
+  - icons: []
+    name: "MaterialDesignIcons-Regular"
+    path: "Fonts/MaterialDesignIcons.ttf"
+    style: "Regular"
+  name: "MaterialDesignIcons"
+- fonts:
+  - icons: []
+    name: "ZapfDingbatsITC"
     path: "Fonts/ZapfDingbats.ttf"
     style: "Regular"
   name: "Zapf Dingbats"
 - fonts:
-  - name: "private"
+  - icons: []
+    name: "private"
     path: "Fonts/class.ttf"
     style: "internal"
   name: "public"
