--- a/Tests/Fixtures/StencilContexts/Plist/all.yaml
+++ b/Tests/Fixtures/StencilContexts/Plist/all.yaml
@@ -136,12 +136,20 @@ files:
 - documents:
   - data:
       Environment: "development"
+      Names:
+      - "John"
+      - "Peter"
+      - "Nick"
       Options:
         Animation Style: "Party Mode"
     metadata:
       properties:
         Environment:
           type: "String"
+        Names:
+          element:
+            type: "String"
+          type: "Array"
         Options:
           properties:
             Animation Style:
