--- a/Tests/Fixtures/StencilContexts/Yaml/mapping.yaml
+++ b/Tests/Fixtures/StencilContexts/Yaml/mapping.yaml
@@ -6,6 +6,10 @@ files:
         bar: "banana"
         baz: "orange"
       hello: "world"
+      names:
+      - "John"
+      - "Peter"
+      - "Nick"
       weight: 3.33e+1
     metadata:
       properties:
@@ -20,6 +24,10 @@ files:
           type: "Dictionary"
         hello:
           type: "String"
+        names:
+          element:
+            type: "String"
+          type: "Array"
         weight:
           type: "Double"
       type: "Dictionary"
