Update plist context to match json changes

--- a/Tests/Fixtures/StencilContexts/Plist/configuration.yaml
+++ b/Tests/Fixtures/StencilContexts/Plist/configuration.yaml
@@ -1,5 +1,28 @@
 files:
-- documents:
+- document:
+    data:
+      Environment: "development"
+      Names:
+      - "John"
+      - "Peter"
+      - "Nick"
+      Options:
+        Animation Style: "Party Mode"
+    metadata:
+      properties:
+        Environment:
+          type: "String"
+        Names:
+          element:
+            type: "String"
+          type: "Array"
+        Options:
+          properties:
+            Animation Style:
+              type: "String"
+          type: "Dictionary"
+      type: "Dictionary"
+  documents:
   - data:
       Environment: "development"
       Names:
